# frei0r

./: README  install_manifest.txt
src/: Makefile.am
src/filter/: CMakeLists.txt
src/filter/cellshade/: cellshade.cpp
src/filter/deface/: CMakeLists.txt  deface.cpp
